--- a/ProjektSemestrIV/Properties/Resources.pl-PL.resx
+++ b/ProjektSemestrIV/Properties/Resources.pl-PL.resx
@@ -129,8 +129,8 @@
   <data name="AddStage" xml:space="preserve">
     <value>Dodaj trasę</value>
   </data>
-  <data name="BestPlayer" xml:space="preserve">
-    <value>Najlepszy gracz</value>
+  <data name="BestShooter" xml:space="preserve">
+    <value>Najlepszy strzelec</value>
   </data>
   <data name="Competitions" xml:space="preserve">
     <value>Zawody</value>
