--- a/ProjektSemestrIV/Properties/Resources.pl-PL.resx
+++ b/ProjektSemestrIV/Properties/Resources.pl-PL.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Accuracy" xml:space="preserve">
+    <value>Celność</value>
+  </data>
   <data name="Add" xml:space="preserve">
     <value>Dodaj</value>
   </data>
@@ -224,6 +227,9 @@
   </data>
   <data name="StartDate" xml:space="preserve">
     <value>Data rozpoczęcia</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Czas</value>
   </data>
   <data name="User" xml:space="preserve">
     <value>Użytkownik</value>
