Added to selected shooter sumOfTimes and sumOfPoints, fixed query

--- a/ProjektSemestrIV/Properties/Resources.resx
+++ b/ProjektSemestrIV/Properties/Resources.resx
@@ -264,6 +264,12 @@
   <data name="StartDate" xml:space="preserve">
     <value>Start Date</value>
   </data>
+  <data name="SumOfPoints" xml:space="preserve">
+    <value>Sum of points</value>
+  </data>
+  <data name="SumOfTimes" xml:space="preserve">
+    <value>Sum of times</value>
+  </data>
   <data name="User" xml:space="preserve">
     <value>User</value>
   </data>
