--- a/ProjektSemestrIV/Properties/Resources.pl-PL.resx
+++ b/ProjektSemestrIV/Properties/Resources.pl-PL.resx
@@ -225,6 +225,9 @@
   <data name="StartDate" xml:space="preserve">
     <value>Data rozpoczęcia</value>
   </data>
+  <data name="Time" xml:space="preserve">
+    <value>Czas</value>
+  </data>
   <data name="User" xml:space="preserve">
     <value>Użytkownik</value>
   </data>
