--- a/ProjektSemestrIV/Properties/Resources.resx
+++ b/ProjektSemestrIV/Properties/Resources.resx
@@ -270,6 +270,9 @@
   <data name="SumOfTimes" xml:space="preserve">
     <value>Sum of times</value>
   </data>
+  <data name="Time" xml:space="preserve">
+    <value>Time</value>
+  </data>
   <data name="User" xml:space="preserve">
     <value>User</value>
   </data>
