--- a/ProjektSemestrIV/Properties/Resources.resx
+++ b/ProjektSemestrIV/Properties/Resources.resx
@@ -126,9 +126,6 @@
   <data name="AddCompetition" xml:space="preserve">
     <value>Add Competition</value>
   </data>
-  <data name="AddCourse" xml:space="preserve">
-    <value>Add Course</value>
-  </data>
   <data name="AddStage" xml:space="preserve">
     <value>Add Stage</value>
   </data>
@@ -181,7 +178,7 @@
     <value>Edit shooter</value>
   </data>
   <data name="EditStage" xml:space="preserve">
-    <value>Edt Stage</value>
+    <value>Edit Stage</value>
   </data>
   <data name="EndDate" xml:space="preserve">
     <value>End Date</value>
@@ -276,13 +273,64 @@
   <data name="SumOfTimes" xml:space="preserve">
     <value>Sum of times</value>
   </data>
-  <data name="Time" xml:space="preserve">
-    <value>Time</value>
-  </data>
   <data name="User" xml:space="preserve">
     <value>User</value>
   </data>
   <data name="View" xml:space="preserve">
     <value>View</value>
+  </data>
+  <data name="Alpha" xml:space="preserve">
+    <value>A</value>
+  </data>
+  <data name="Charlie" xml:space="preserve">
+    <value>C</value>
+  </data>
+  <data name="CompetitionSummary" xml:space="preserve">
+    <value>Competition Summary</value>
+  </data>
+  <data name="Delta" xml:space="preserve">
+    <value>D</value>
+  </data>
+  <data name="EditCompetition" xml:space="preserve">
+    <value>Edit Competition</value>
+  </data>
+  <data name="EditRun" xml:space="preserve">
+    <value>Edit Run</value>
+  </data>
+  <data name="Extra" xml:space="preserve">
+    <value>Xtra</value>
+  </data>
+  <data name="GeneralInformation" xml:space="preserve">
+    <value>General Information</value>
+  </data>
+  <data name="Miss" xml:space="preserve">
+    <value>MISS</value>
+  </data>
+  <data name="NoShoot" xml:space="preserve">
+    <value>N-S</value>
+  </data>
+  <data name="Procedure" xml:space="preserve">
+    <value>Proc</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="ShooterID" xml:space="preserve">
+    <value>ShooterID</value>
+  </data>
+  <data name="ShooterOnCompetitionSummary" xml:space="preserve">
+    <value>Shooter on competition summary</value>
+  </data>
+  <data name="ShooterOnStageSummary" xml:space="preserve">
+    <value>Shooter on stage summary</value>
+  </data>
+  <data name="ShooterSummary" xml:space="preserve">
+    <value>Shooter summary</value>
+  </data>
+  <data name="StageID" xml:space="preserve">
+    <value>StageID</value>
+  </data>
+  <data name="StageSummary" xml:space="preserve">
+    <value>Stage Summary</value>
   </data>
 </root>
