--- a/ProjektSemestrIV/Properties/Resources.pl-PL.resx
+++ b/ProjektSemestrIV/Properties/Resources.pl-PL.resx
@@ -240,6 +240,9 @@
   <data name="Name" xml:space="preserve">
     <value>Nazwa</value>
   </data>
+  <data name="Navigation" xml:space="preserve">
+    <value>Nawigacja</value>
+  </data>
   <data name="NoShoot" xml:space="preserve">
     <value>N-S</value>
   </data>
